changed css to sccs and small navbar overlay fix on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -173,165 +173,177 @@ span.bold {
 }
 
 
-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-    border-bottom: 1px solid #fff;
+nav {
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        overflow: hidden;
+        border-bottom: 1px solid #fff;
+    }
+    li {
+        a {
+            display: block;
+            text-decoration: none;
+            margin-left: 10px;
+            padding: 0px 15px;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+        float: left;
+    }
+    .menu-btn {
+        &:hover {
+            text-decoration: underline;
+        }
+        display: none;
+        &:checked {
+            ~ {
+                .menu {
+                    max-height: 240px;
+                }
+                .menu-icon {
+                    .navicon {
+                        background: transparent;
+                        &:before {
+                            transform: rotate(-45deg);
+                        }
+                        &:after {
+                            transform: rotate(45deg);
+                        }
+                    }
+                    &:not(.steps) {
+                        .navicon {
+                            &:before {
+                                top: 0;
+                            }
+                            &:after {
+                                top: 0;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .logo {
+        display: none;
+        float: left;
+        font-size: 2em;
+        text-decoration: none;
+        margin-top: 10px;
+    }
+    .menu {
+        clear: none;
+        max-height: none;
+    }
+    .menu-icon {
+        cursor: pointer;
+        display: inline-block;
+        float: right;
+        background: #fae41a;
+        padding: 28px 20px;
+        position: relative;
+        user-select: none;
+        .navicon {
+            background: #000;
+            display: block;
+            height: 2px;
+            position: relative;
+            transition: background .2s ease-out;
+            width: 18px;
+            &:before {
+                background: #000;
+                content: '';
+                display: block;
+                height: 100%;
+                position: absolute;
+                transition: all .2s ease-out;
+                width: 100%;
+                top: 5px;
+            }
+            &:after {
+                background: #000;
+                content: '';
+                display: block;
+                height: 100%;
+                position: absolute;
+                transition: all .2s ease-out;
+                width: 100%;
+                top: -5px;
+            }
+        }
+    }
 }
-
-nav li a {
-    display: block;
-    text-decoration: none;
-    margin-left: 10px;
-    padding:0px 15px;
+ul {
+    li {
+        a.active {
+            font-weight: bold;
+        }
+    }
 }
-
-
-nav li a:hover,
-nav .menu-btn:hover {
-    text-decoration: underline;
-}
-
-nav .logo {
-    display: none;
+ul.menu.left {
     float: left;
-    font-size: 2em;
-    text-decoration: none;
-    margin-top:10px;
-
 }
-
-nav li {
-    float: left;
-}
-ul li a.active {
-    font-weight: bold;
-}
-nav .menu {
-    clear: none;
-    max-height: none;
-}
-
-ul.menu.left{
-    float:left;
-}
-
-ul.menu.right{
-    float:right;
+ul.menu.right {
+    float: right;
     margin-left: auto;
 }
-nav .menu-icon {
-    cursor: pointer;
-    display: inline-block;
-    float: right;
-    background: #fae41a;
-    padding: 28px 20px;
-    position: relative;
-    user-select: none;
-}
 
-nav .menu-icon .navicon {
-    background: #000;
-    display: block;
-    height: 2px;
-    position: relative;
-    transition: background .2s ease-out;
-    width: 18px;
-}
-
-nav .menu-icon .navicon:before,
-nav .menu-icon .navicon:after {
-    background: #000;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
-}
-
-nav .menu-icon .navicon:before {
-    top: 5px;
-}
-
-nav .menu-icon .navicon:after {
-    top: -5px;
-}
-
-nav .menu-btn {
-    display: none;
-}
-
-nav .menu-btn:checked ~ .menu {
-    max-height: 240px;
-}
-
-nav .menu-btn:checked ~ .menu-icon .navicon {
-    background: transparent;
-}
-
-nav .menu-btn:checked ~ .menu-icon .navicon:before {
-    transform: rotate(-45deg);
-}
-
-nav .menu-btn:checked ~ .menu-icon .navicon:after {
-    transform: rotate(45deg);
-}
-
-nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-    top: 0;
-}
 @media (max-width: 767px) {
+    //margin-top 80px to fix navbar overlay on mobile;
+    body{
+        margin-top:70px;
+    }
     nav.nav-container.container {
         padding: 0;
     }
-    nav .logo {
-        display: block;
-        float: left;
-        margin-left: 15px;
-        text-align: unset;
+    nav {
+        .logo {
+            display: block;
+            float: left;
+            margin-left: 15px;
+            text-align: unset;
+        }
+        li {
+            float: unset;
+            display: unset;
+            a {
+                margin-left: 0px;
+                padding: 15px 0px;
+            }
+        }
+        .menu {
+            clear: both;
+            max-height: 0;
+            transition: max-height .2s ease-out;
+            text-align: center;
+        }
+        ul {
+            border-bottom: none;
+        }
     }
     .nav-con {
         min-height: unset;
         height: unset;
-    }
-    nav li {
-        float: unset;
-        display: unset;
-    }
-    nav .menu {
-        clear: both;
-        max-height: 0;
-        transition: max-height .2s ease-out;
-        text-align: center;
-    }
-    nav ul {
-        border-bottom: none;
-    }
-
-    ul.menu.left {
-        float: unset;
-    }
-    ul.menu.left a{
-        font-weight: unset;
-    }
-    ul.menu.right {
-        float: unset;
-    }
-    nav li a {
-        margin-left: 0px;
-        padding: 15px 0px;
-    }
-    .nav-con {
         position: fixed;
+        top: 0px;
         width: 100%;
         z-index: 100;
         border-top: unset;
     }
+    ul.menu.left {
+        float: unset;
+        a {
+            font-weight: unset;
+        }
+    }
+    ul.menu.right {
+        float: unset;
+    }
 }
+
 @media (min-width: 767px) {
     nav .menu-icon {
         display: none;
